# dicom-drl

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
src/: inspect_dicom.py
src/dicom_drl/core/: logic.py
src/dicom_drl/web/: app.py
src/dicom_drl/web/templates/: results.html  selection.html
